crates/ditto-checker/tests/golden/type-errors/unknown_variable.ditto
module Test exports (..)

bang = nada
